--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </h6>
             <a href="#" class="js-yt-link card-link text-decoration-none rounded-5">You-Tube Link</a>
           </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
+          <li class="list-group-item js-modal-wrapper d-flex justify-content-between align-items-center">
             <button type="button" class="btn btn-light border-secondary shadow-sm js-modal-btn w-100 rounded-0 rounded-start" data-bs-toggle="modal" data-bs-target="#exampleModalTest">
               More Info
             </button>
