--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <option class="fw-bold" disabled>Sort alphabetically</option>
                 <option value="A-Z">A-Z</option>
                 <option value="Z-A">Z-A</option>
-                <option class="fw-bold" disabled>Sort Raiting</option>
+                <option class="fw-bold" disabled>Sort Rating</option>
                 <option value="0-10">0-10</option>
                 <option value="10-0">10-0</option>
               </select>
@@ -146,7 +146,7 @@
           <h5 class="js-card-title mb-0 fs-6 fw-bold rounded-4 col-12">
             Name:
             <span class="js-movie-title fw-lighter">
-              Patton Oswalt: Annihilation
+              Patton Oswald: Annihilation
             </span>
           </h5>
         </div>
